Add project rules and content verification system
- Enforce strict content policy
- Add pre-commit and commit-msg hooks
- Add automated content verification script
- Update .gitignore with prohibited patterns
- Ensure project integrity

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ node_modules/
 # 备份文件
 *.bak
 *.tmp
+
+# CRITICAL: Never commit these
+**/*claude*
+**/*Claude*
+**/*CLAUDE*
+**/*anthropic*
+**/*Anthropic*
+**/*ANTHROPIC*
+.claude/
+.anthropic/
