Fix Docker build configuration and rename to User Profiling System
Fixed:
- Corrected Dockerfile build context from service directory to backend directory
- Updated all service build contexts in docker-compose.yml
- Fixed behavior-service Dockerfile to match other services pattern
- Removed obsolete docker-compose version field

Renamed:
- Changed project name from "User Profile System" to "User Profiling System"
- Updated in README.md, deploy.sh, quick-start.sh, .env.example

All services now build correctly with proper path resolution.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # ====================================
-# User Profile System - Environment Configuration
+# User Profiling System - Environment Configuration
 # ====================================
 # Copy this file to .env and modify values as needed
 # DO NOT commit .env file to version control!
