--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # ====================
   # Infrastructure Layer
@@ -98,8 +96,8 @@ services:
   # Gateway Service
   gateway-service:
     build:
-      context: ./backend/gateway-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: gateway-service/Dockerfile
     container_name: ups-gateway
     ports:
       - "8080:8080"
@@ -128,8 +126,8 @@ services:
   # User Service
   user-service:
     build:
-      context: ./backend/user-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: user-service/Dockerfile
     container_name: ups-user-service
     ports:
       - "8081:8081"
@@ -165,8 +163,8 @@ services:
   # Profile Service
   profile-service:
     build:
-      context: ./backend/profile-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: profile-service/Dockerfile
     container_name: ups-profile-service
     ports:
       - "8082:8082"
@@ -202,8 +200,8 @@ services:
   # Behavior Service
   behavior-service:
     build:
-      context: ./backend/behavior-service
-      dockerfile: Dockerfile
+      context: ./backend
+      dockerfile: behavior-service/Dockerfile
     container_name: ups-behavior-service
     ports:
       - "8083:8083"
