Replace behavior-service with tag-service in deployment
Fixed:
- Replaced non-existent behavior-service with tag-service in docker-compose.yml
- Removed empty behavior-service directory
- Updated all documentation to reflect actual services

Services now deployed:
- Gateway Service (8080)
- User Service (8081)
- Profile Service (8082)
- Tag Service (8083)

Tag service provides label management functionality for user profiling.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -197,12 +197,12 @@ services:
       retries: 3
       start_period: 90s
 
-  # Behavior Service
-  behavior-service:
+  # Tag Service
+  tag-service:
     build:
       context: ./backend
-      dockerfile: behavior-service/Dockerfile
-    container_name: ups-behavior-service
+      dockerfile: tag-service/Dockerfile
+    container_name: ups-tag-service
     ports:
       - "8083:8083"
     environment:
