修复关键安全问题
安全修复内容：

1. JWT密钥安全加固
   - 移除硬编码的默认密钥
   - 强制要求环境变量配置
   - 添加密钥长度验证（最少32字符）
   - 系统启动时自动验证配置
   - 替换废弃的Date API为java.time包

2. 数据库密码安全
   - 移除所有硬编码的弱密码
   - 更新.env.example为安全模板
   - quick-start.sh自动生成强随机密码
   - 密码长度提升至24字符

3. Redis安全配置
   - 确保所有环境Redis都配置密码
   - 删除未配置密码的backend/docker-compose.yml

4. 配置文件整理
   - 删除冗余的backend/docker-compose.yml
   - 删除冗余的backend/.env.example
   - 统一使用根目录配置文件

5. 文档更新
   - 更新DEPLOYMENT.md添加安全配置说明
   - 新增SECURITY.md安全配置指南
   - 添加安全检查清单
   - 添加应急响应流程

修复的安全问题：
- 🔴 JWT密钥使用默认值（高危）
- 🔴 数据库密码硬编码（高危）
- 🔴 Redis未配置密码（高危）
- 🟡 使用废弃Date API（中危）
- 🟡 配置文件不一致（中危）

--- a/.env.example
+++ b/.env.example
@@ -1,31 +1,36 @@
 # ====================================
 # User Profiling System - Environment Configuration
 # ====================================
-# Copy this file to .env and modify values as needed
-# DO NOT commit .env file to version control!
+# ⚠️ SECURITY WARNING:
+# 1. Copy this file to .env and modify ALL placeholder values
+# 2. NEVER commit .env file to version control!
+# 3. Use strong passwords (min 16 chars, mixed case, numbers, symbols)
+# 4. Generate JWT secret: openssl rand -base64 32
+# ====================================
 
 # ====================================
 # Database Credentials
 # ====================================
 
 # MySQL Configuration
-MYSQL_ROOT_PASSWORD=your_mysql_root_password_here
+MYSQL_ROOT_PASSWORD=CHANGE_THIS_MYSQL_ROOT_PASSWORD_IN_PRODUCTION
 MYSQL_USER=userservice
-MYSQL_PASSWORD=your_mysql_password_here
+MYSQL_PASSWORD=CHANGE_THIS_MYSQL_PASSWORD_IN_PRODUCTION
 
 # MongoDB Configuration
 MONGO_USERNAME=admin
-MONGO_PASSWORD=your_mongo_password_here
+MONGO_PASSWORD=CHANGE_THIS_MONGO_PASSWORD_IN_PRODUCTION
 
 # Redis Configuration
-REDIS_PASSWORD=your_redis_password_here
+REDIS_PASSWORD=CHANGE_THIS_REDIS_PASSWORD_IN_PRODUCTION
 
 # ====================================
 # Application Configuration
 # ====================================
 
-# JWT Secret (minimum 32 characters)
-JWT_SECRET=your_jwt_secret_key_at_least_32_characters_long_here
+# JWT Secret (REQUIRED, minimum 32 characters)
+# Generate with: openssl rand -base64 32
+JWT_SECRET=CHANGE_THIS_JWT_SECRET_KEY_AT_LEAST_32_CHARACTERS_REQUIRED
 
 # Admin User Credentials
 ADMIN_USERNAME=admin
